config-root/namespaces/jx-production/cosign-test2/cosign-test2-cosign-test2-deploy.yaml
# Source: cosign-test2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosign-test2-cosign-test2
  labels:
    draft: draft-app
    chart: "cosign-test2-0.0.20"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'cosign-test2'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: cosign-test2-cosign-test2
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: cosign-test2-cosign-test2
    spec:
      serviceAccountName: cosign-test2-cosign-test2
      containers:
        - name: cosign-test2
          image: "ghcr.io/jenkins-x/cosign-test2:0.0.20"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
