config-root/namespaces/jx-production/cosign-test2/cosign-test2-ingress.yaml
# Source: cosign-test2/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: cosign-test2
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: cosign-test2
              servicePort: 80
      host: cosign-test2-jx-production.dev.jenkins-x.me
